removing state parameters, adding change location fxn

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
            <input type="text" id="city" class="form-control">
          </div>
        </form>
-       <form id="w-form">
+       <!-- <form id="w-form">
          <div class="form-group">
            <label for="state">State</label>
            <input type="text" id="state" class="form-control">
          </div>
-       </form>
+       </form> -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
